--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,31 @@
 header {
-    color: black;
+    color: white;
     background-image: url(/home/coding/www/dev/portfolio/public/img/23949406_569166796794027_671311383_o.jpg);
     border: 10px solid black;
 }
-a {
-    border: 2px solid black;
-    width: 300px;
-    width: auto;
-    float: left;
-    display: inline-block;
+header>h1, h2 {
+    text-align: center;
 }
 li {
+    border: 2px solid black;
+    float: left;
+    display: inline;
+    padding: 5%;
+    font-size: 20px;
+    text-align: center;
+}
+nav{
     overflow: hidden;
 }
-h1{
-    
+section{
+    border: 7px solid black;
+    background-color: grey;
 }
-body {
-    
+section>h1 {
+    padding: 5px;
+    margin: 20%;
+    border: 2px solid black;
+}
+footer {
+    background-color: black;
 }
