--- a/exercice/public/css/style3.css
+++ b/exercice/public/css/style3.css
@@ -4,6 +4,9 @@ section {
     width: 30%;
     float: left;   
 }
+h1 {
+    text-align: left;
+}
 div {
     border: 1px solid black;
     padding: 1%;
