--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,13 +18,15 @@ li {
 
 
 section{
-    border: 7px solid black;
-    background-color: grey;
+    border: 2px solid #333;
+    background-color: #1abc9c;
+    height: 300px;
 }
 section>h1 {
     padding: 5px;
-    margin: 20%;
     border: 2px solid black;
+    width: 30%;
+    margin-left: 10%;
 }
 footer {
     background-color: black;
